--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta charset="UTF-8">
   <title>pomodoro timer</title>
 
-  <!-- css link  -->
-  <link rel="stylesheet" type="text/css" href="../pomodoroTimer/assets /style.css">
 
-  <!-- reset css link  -->
-  <link rel="resetcss" type="reset/css" href="../pomodoroTimer/assets /reset.css">
 
   <!-- bootstrap-css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -26,32 +22,39 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
-</head>
-<body>
-<audio id="buzzer" src="" type="audio/mpeg"></audio>
+  <!-- reset css link  -->
+  <link rel="resetcss" type="reset/css" href="./assets /reset.css">
 
-<div class="layout">
-  <div class="center">        
-    <div id="wrapper">
-    <div id="timer"></div>
-    <button id="start" class="btn btn-success">Start</button>
-    <button id="pause" class="btn btn-warning">Pause</button>
-    <button id="stop" class="btn btn-danger">Stop</button>
-    <div id="audio"></div>
-    <div id="points"></div>
-</div>
-</div>
-</div>
+  <!-- css link  -->
+  <link rel="stylesheet" type="text/css" href="./assets /style.css">
+
+</head>
+
+<body>
+  <audio id="buzzer" src="" type="audio/mpeg"></audio>
+
+  <div class="layout">
+    <div class="center">
+      <div id="wrapper">
+        <div id="timer"></div>
+        <button id="start" class="btn btn-success">Start</button>
+        <button id="pause" class="btn btn-warning">Pause</button>
+        <button id="stop" class="btn btn-danger">Stop</button>
+        <div id="audio"></div>
+        <div id="points"></div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
- <!-- jquery  -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
- <script src="uploadfuntion.js"> </script>
+<!-- jquery  -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="uploadfuntion.js"> </script>
 
 
 <!-- js link  -->
-<script language="javascript" type="text/javascript" src="../pomodoroTimer/js/app.js"></script>
+<script language="javascript" type="text/javascript" src="./js/app.js"></script>
 <script language="javascript" type="text/javascript"
   src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
 
